Add disable mouse

--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -507,6 +507,14 @@
                  (send-string-to-terminal (format "\033]52;c;%s\a" base64_text))))
            (message "No region selected."))))
    #+end_src
+** Mouse / touchpad
+   #+begin_src emacs-lisp
+     (use-package disable-mouse
+       :ensure t
+       :if (display-graphic-p)
+       :config
+       (global-disable-mouse-mode))
+   #+end_src
 ** Wayland / x11
    #+begin_src emacs-lisp
      (when (memq  window-system '(pgtk x))
