--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1963,9 +1963,13 @@
 ** atomic-chrome
    #+begin_src emacs-lisp
      (use-package atomic-chrome
-       :ensure t
+       :vc (:url "https://github.com/KarimAziev/atomic-chrome" :rev :newest)
        :if (display-graphic-p)
        :config
+       (setq-default atomic-chrome-extension-type-list '(atomic-chrome))
+       (setq-default atomic-chrome-url-major-mode-alist
+                     '(("github.com" . gfm-mode)
+                       ("gitlab.com" . gfm-mode)))
        (atomic-chrome-start-server))
    #+end_src
 ** dictionary
