``` Update Vivaldi version and integrate org-fragtog package in Emacs
Updated the version of Vivaldi in both generated.json and
generated.nix files from 6.9.3447.41 to 6.9.3447.44, along with the
corresponding SHA256 hash for the new download URL.

Additionally, added the org-fragtog package to the Emacs
configuration, ensuring its automatic activation within org-mode to
enhance integration for LaTeX fragment toggling.  ```

--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -1183,6 +1183,11 @@
          (org-appear-inside-latex   t)
          (org-appear-autosubmarkers t))
 
+
+       (use-package org-fragtog
+         :ensure t
+         :hook (org-mode-hook . org-fragtog-mode))
+
        (use-package org-web-tools
          :ensure t
          :bind
