--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -810,9 +810,7 @@
    #+begin_src emacs-lisp
      (use-package mwim
        :ensure t
-       :bind (("C-," . mwim-beginning-of-code-or-line)
-              ("C-r" . mwim-beginning-of-code-or-line)
-              ("C-a" . mwim-beginning-of-code-or-line)
+       :bind (("C-a" . mwim-beginning-of-code-or-line)
               ("C-e" . mwim-end-of-code-or-line)))
    #+end_src
 ** dmacro
