--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -1472,7 +1472,7 @@
                                        ("b" "book" plain "%?"
                                         :if-new
                                         (file+head "reference/book/${slug}.org"
-                                                   "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n* Links\n  - \n* Facts\n\n* Interpretations\n\n* Actions\n")
+                                                   "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n* Location\n\n\n* Links\n  - \n\n* Facts\n\n* Interpretations\n\n* Actions\n")
                                         :immediate-finish t
                                         :unnarrowed t)
                                        ("w" "web" plain "%?"
