--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -344,12 +344,29 @@
        :ensure t
        :hook (prog-mode-hook . rainbow-delimiters-mode))
    #+end_src
-** Nyan mode
+** moody
    #+begin_src emacs-lisp
-     (use-package nyan-mode
+     (use-package moody
        :ensure t
-       :init
-       (nyan-mode 1))
+       :config
+       (setq x-underline-at-descent-line t)
+       (moody-replace-mode-line-front-space)
+       (moody-replace-mode-line-buffer-identification)
+       (moody-replace-vc-mode))
+
+     (use-package minions
+       :ensure t
+       :config
+       (minions-mode)
+       (setq minions-mode-line-lighter "[+]"))
+   #+end_src
+** mlscroll
+   #+begin_src emacs-lisp
+     (use-package mlscroll
+       :ensure t
+       :config
+       (setq mlscroll-shortfun-min-width 11)
+       (mlscroll-mode 1))
    #+end_src
 ** tab-bar-mode
    #+begin_src emacs-lisp
