--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -1220,6 +1220,7 @@
          (org-adapt-indentation t)
          (org-confirm-babel-evaluate nil)
          :config
+         (keymap-unset orgtbl-mode-map "<backspace>")
          (defun org-insert-clipboard-image ()
            "Generate png file from a clipboard image and insert a link to current buffer."
            (interactive)
@@ -1622,21 +1623,33 @@
          (org-hugo-base-dir my:d:org-hugo)
          (org-hugo-default-section-directory "notes")
          :config
-         (defun org-hugo-set-slug-if-absent (draft-position)
-           "Set the Hugo slug from the ID if it's not already set."
-           (goto-char (point-min))
-           (unless (re-search-forward "^#\\+hugo_slug:" nil t)
-             (when (re-search-forward ":ID: +\\([a-zA-Z0-9-]+\\)" nil t)
-               (let ((id (match-string 1)))
-                 (goto-char draft-position)
-                 (forward-line)
-                 (insert (concat "#+hugo_slug: " id "\n"))))))
-
          (defun org-hugo-replace-last-modified ()
            "Replace last_modified with hugo_lastmod."
            (goto-char (point-min))
            (while (re-search-forward "^#\\+last_modified:" nil t)
              (replace-match "#+hugo_lastmod:")))
+
+         (defun my:org-hugo-custom-output (orig-fun &optional async subtreep visible-only)
+           "Customize the output directory and file name for `org-hugo-export-to-md`
+       based on ID and #+lang, placing the output inside `org-hugo-base-dir/content/posts/`."
+           (save-excursion
+             (goto-char (point-min))
+             (let* ((base-dir (expand-file-name "content/posts/" org-hugo-base-dir))
+                    (id (when (re-search-forward "^:ID: +\\([a-zA-Z0-9-]+\\)" nil t)
+                          (match-string 1)))
+                    (lang (or (when (re-search-forward "^#\\+lang: +\\([a-zA-Z0-9-]+\\)" nil t)
+                                (match-string 1))
+                              "en"))
+                    (custom-dir (expand-file-name id base-dir))
+                    (custom-filename (format "index.%s.md" lang))
+                    (outfile (expand-file-name custom-filename custom-dir)))
+               (unless (file-exists-p custom-dir)
+                 (make-directory custom-dir t))
+               (prog1
+                   (org-export-to-file 'hugo outfile async subtreep visible-only)
+                 (message "Exported Hugo markdown to: %s" outfile)))))
+
+         (advice-add 'org-hugo-export-to-md :around #'my:org-hugo-custom-output)
 
          (defun org-hugo-export-drafts ()
            "Export all non-draft .org files in my:d:org-roam to markdown using org-hugo."
@@ -1651,7 +1664,6 @@
                    (let ((draft-position (re-search-forward "^#\\+hugo_draft: false$" nil t))
                          (modified (buffer-modified-p)))
                      (when draft-position
-                       (org-hugo-set-slug-if-absent draft-position)
                        (org-hugo-replace-last-modified)
                        (org-hugo-export-to-md)
                        (set-buffer-modified-p modified))))
